Fix sharp edge of the blurry archive header

--- a/assets/css/blog/feed.css
+++ b/assets/css/blog/feed.css
@@ -96,7 +96,8 @@
     position: sticky;
     top: 0;
     z-index: 10;
-    padding: 1rem 0;
+    margin: 0 -1.5rem;
+    padding: 1rem 1.5rem;
     width: inherit;
     color: var(--darker-gray-color);
     font-size: 1.7rem;
